Resolved numerous Sonar code smells